--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
-.envrc*
-dst/*
-!dst/.gitkeep
-packaged.yaml
-cover.out
+#Binariesforprogramsandplugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+artifact/
+*.out
+
+# env
+.envrc
