tag key , value to plot metrics

--- a/template.yaml
+++ b/template.yaml
@@ -11,11 +11,18 @@ Resources:
       Handler: 'ri-utilization-plotter'
       Runtime: go1.x
       Timeout: 300
-      Role: arn:aws:iam::123456789012:role/original
+      Policies:
+        - CostExplorerReadOnlyPolicy: {}
+        - SSMParameterReadPolicy:
+            ParameterName: datadog_api_key
+        - SSMParameterReadPolicy:
+            ParameterName: datadog_app_key
       Environment:
         Variables:
-          DD_API_KEY: datadog_api_key
-          DD_APP_KEY: datadog_app_key
+          DD_API_KEY_NAME: datadog_api_key
+          DD_APP_KEY_NAME: datadog_app_key
+          TAG_KEY: account # tag key of metrics
+          TAG_VAL: hoge # tag value of metrics ex) your project name
       Events:
         RIUtilizationPlotterCron:
             Type: Schedule
