--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,9 @@ jobs:
       uses: actions/checkout@v1
     - name: Test
       run: go test -v -count=1 -race -cover -coverprofile=coverage ./...
-    - name: Upload coverage to Codecov  
+      env:
+        AWS_REGION: ap-northeast-1
+    - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
