--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -12,57 +12,27 @@ jobs:
       with:
         run: imports
         token: ${{ secrets.GITHUB_TOKEN }}
-
-  errcheck:
-    name: Errcheck
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: check
+    - name: errcheck
       uses: grandcolline/golang-github-actions@v1.1.0
       with:
         run: errcheck
         token: ${{ secrets.GITHUB_TOKEN }}
-
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: check
+    - name: lint
       uses: grandcolline/golang-github-actions@v1.1.0
       with:
         run: lint
         token: ${{ secrets.GITHUB_TOKEN }}
-
-  shadow:
-    name: Shadow
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: check
+    - name: shadow
       uses: grandcolline/golang-github-actions@v1.1.0
       with:
         run: shadow
         token: ${{ secrets.GITHUB_TOKEN }}
-
-  staticcheck:
-    name: StaticCheck
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: check
+    - name: staticcheck
       uses: grandcolline/golang-github-actions@v1.1.0
       with:
         run: staticcheck
         token: ${{ secrets.GITHUB_TOKEN }}
-
-  sec:
-    name: Sec
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: check
+    - name: sec
       uses: grandcolline/golang-github-actions@v1.1.0
       with:
         run: sec
