--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   imports:
-    name: Imports
+    name: Static Check
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
